made initial folders and config and added clang formatter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,47 @@
-cmake_minimum_required(VERSION 3.0.2)
-project(vision_kf)
+cmake_minimum_required(VERSION 3.5)
+project(vortex-vkf)
 
-find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  roscpp
-  rospy
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+# Find dependencies
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(eigen REQUIRED)
+
+
+# Add include
+include_directories(include)
+
+
+
+add_executable(vkf_node src/nodes/vkf_node.cpp)
+ament_target_dependencies(vkf_node 
+  rclcpp 
   std_msgs
-  tf
-  nav_msgs
-  tf2_ros
+  eigen
 )
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES ekf_node
-#  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs
-#  DEPENDS system_lib
-)
-
-###########
-## Build ##
-###########
-
-include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
-)
+# Let ros2 run find the executables
+install(TARGETS
+  vkf_node
+  DESTINATION lib/${PROJECT_NAME})
 
 
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  # the following line skips cpplint (only works in a git repo)
+  # uncomment the line when this package is not in a git repo
+  #set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+ament_package()
