--- a/.github/workflows/clang-formatter.yml
+++ b/.github/workflows/clang-formatter.yml
@@ -1,8 +1,8 @@
 name: Run clang-format Linter
 
 on: 
-  push:
-    branches: [ main ]
+  # push:
+    # branches: [ main ]
   workflow_dispatch:
 
   pull_request:
