ukf_test compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,8 +56,9 @@ if(BUILD_TESTING)
     test/main.cpp
     test/matrix_size_test.cpp
     test/lti_model_test.cpp
+    # test/six_dof_model_test.cpp
     test/ekf_test.cpp
-    test/six_dof_model_test.cpp
+    test/ukf_test.cpp
   )
   target_include_directories(${PROJECT_NAME}_test PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
