--- a/launch/vkf_node.yaml
+++ b/launch/vkf_node.yaml
@@ -2,6 +2,6 @@ launch:
 
 - node:
     pkg: "vortex-vkf"
-    exec: "vkf_node"
+    exec: "vortex-vkf_node"
     name: "vkf_node"
-    namespace: "filter"
+
