fixup erk methods

--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -118,11 +118,12 @@ if(BUILD_TESTING)
     test/gtest_assertions.cpp
     ${lib_src}
 
-    test/ekf_test.cpp
-    test/ukf_test.cpp
-    test/probability_test.cpp
     test/dynamic_model_test.cpp
+    test/ekf_test.cpp
+    test/numerical_integration_test.cpp
+    test/probability_test.cpp
     test/sensor_model_test.cpp
+    test/ukf_test.cpp
     test/filter_test.cpp
   )
   target_include_directories(${PROJECT_NAME}_test PUBLIC
