Add IPDA test and update IPDA class***

--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -102,6 +102,7 @@ if(BUILD_TESTING)
     # test/sensor_model_test.cpp
     # test/ukf_test.cpp
     test/pdaf_test.cpp
+    test/ipda_test.cpp
   )
   target_include_directories(${PROJECT_NAME}_test PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
