--- a/.github/workflows/clang-formatter.yml
+++ b/.github/workflows/clang-formatter.yml
@@ -1,19 +1,19 @@
 name: Run clang-format Linter
 
 on: 
-  # push:
-    # branches: [ main ]
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
-  pull_request:
-    types: [opened, reopened]
-    branches: [ main ]
+  # pull_request:
+  #   types: [opened, reopened]
+  #   branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: DoozyX/clang-format-lint-action@v0.17
       with:
         source: '.'
