--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -73,7 +73,7 @@ jobs:
                 "mixin": ["coverage-pytest"]
               }
             }
-          package-name: ${{ PACKAGES }}
+          package-name: ${{ env.PACKAGES }}
           target-ros1-distro: ${{ matrix.ros_distribution }}
       - name: build and test ROS 2
         if: ${{ matrix.ros_version == 2 }}
@@ -88,7 +88,7 @@ jobs:
                 "mixin": ["coverage-pytest"]
               }
             }
-          package-name: ${{ PACKAGES }}
+          package-name: ${{ env.PACKAGES }}
           target-ros2-distro: ${{ matrix.ros_distribution }}
       - uses: codecov/codecov-action@v1.2.1
         with:
