--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -32,9 +32,9 @@ jobs:
         # https://ros.org/reps/rep-2000.html
         include:
           # Noetic Ninjemys (May 2020 - May 2025)
-          - docker_image: ubuntu:focal
-            ros_distribution: noetic
-            ros_version: 1
+          #- docker_image: ubuntu:focal
+          #  ros_distribution: noetic
+          #  ros_version: 1
 
           # Humble Hawksbill (May 2022 - May 2027)
           - docker_image: ubuntu:jammy
@@ -47,9 +47,9 @@ jobs:
             ros_version: 2
 
           # Rolling Ridley (No End-Of-Life)
-          - docker_image: ubuntu:jammy
-            ros_distribution: rolling
-            ros_version: 2
+          #- docker_image: ubuntu:jammy
+          #  ros_distribution: rolling
+          #  ros_version: 2
 
     container:
       image: ${{ matrix.docker_image }}
