--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -60,24 +60,9 @@ jobs:
         uses: ros-tooling/setup-ros@v0.7
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
-      - name: build and test ROS 1
-        if: ${{ matrix.ros_version == 1 }}
+      - name: build and test ROS 2 packages
         uses: ros-tooling/action-ros-ci@v0.3
-        with:
-          colcon-defaults: |
-            {
-              "build": {
-                "mixin": ["asan-gcc", "coverage-gcc", "coverage-pytest"]
-              },
-              "test": {
-                "mixin": ["coverage-pytest"]
-              }
-            }
-          package-name: ${{ env.PACKAGES }}
-          target-ros1-distro: ${{ matrix.ros_distribution }}
-      - name: build and test ROS 2
-        if: ${{ matrix.ros_version == 2 }}
-        uses: ros-tooling/action-ros-ci@v0.3
+        id: action_ros_ci_step
         with:
           colcon-defaults: |
             {
