--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -21,6 +21,7 @@ jobs:
         ros_distribution:
           - humble
           - iron
+      fail-fast: false
 
         # Define the Docker image(s) associated with each ROS distribution.
         # The include syntax allows additional variables to be defined, like
@@ -31,11 +32,6 @@ jobs:
         # https://ros.org/reps/rep-0003.html
         # https://ros.org/reps/rep-2000.html
         include:
-          # Noetic Ninjemys (May 2020 - May 2025)
-          #- docker_image: ubuntu:focal
-          #  ros_distribution: noetic
-          #  ros_version: 1
-
           # Humble Hawksbill (May 2022 - May 2027)
           - docker_image: ubuntu:jammy
             ros_distribution: humble
