--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -63,12 +63,16 @@ jobs:
           colcon-defaults: |
             {
               "build": {
-                "mixin": ["asan-gcc", "coverage-gcc", "coverage-pytest"]
+                "mixin": ["coverage-gcc", "coverage-pytest"]
               },
               "test": {
                 "mixin": ["coverage-pytest"]
               }
             }
+          # If possible, pin the repository in the workflow to a specific commit to avoid
+          # changes in colcon-mixin-repository from breaking your tests.
+          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/1ddb69bedfd1f04c2f000e95452f7c24a4d6176b/index.yaml
+
           package-name: ${{ env.PACKAGES }}
           target-ros2-distro: ${{ matrix.ros_distribution }}
           
