--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -43,9 +43,9 @@ jobs:
             ros_version: 2
 
           # Rolling Ridley (No End-Of-Life)
-          #- docker_image: ubuntu:jammy
-          #  ros_distribution: rolling
-          #  ros_version: 2
+          - docker_image: ubuntu:jammy
+           ros_distribution: rolling
+           ros_version: 2
 
     container:
       image: ${{ matrix.docker_image }}
