--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,21 @@
 fixes:
   # For each package in the repo
-  - "ros_ws/src/*/vortex-vkf/vortex-filtering/::"
+  - "ros_ws/src/*/vortex-vkf/::"
+
+comment:
+  layout: "header, diff, flags, components"
+ 
+coverage:
+  status:
+    project: off
+    patch: off
+
+flag_management:
+  individual_flags:
+     - name: vortex-filtering
+       paths:
+        - vortex-filtering/include/vortex_filtering/
+       statuses:
+        - type: project
+          target: auto
+          threshold: 1%
