--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,5 @@
 fixes:
+  # For each package in the repo
   - "ros_ws/src/*/vortex-vkf/::"
 
 comment:
@@ -18,23 +19,3 @@ flag_management:
         - type: project
           target: auto
           threshold: 1%
-
-
-component_management:
-  individual_components:
-    - component_id: vortex-filtering-models
-      paths:
-        - vortex-filtering/include/vortex_filtering/models
-    - component_id: vortex-filtering-filters
-      paths:
-        - vortex-filtering/include/vortex_filtering/filters
-    - component_id: vortex-filtering-numerical-integration
-      paths:
-        - vortex-filtering/include/vortex_filtering/numerical_integration
-    - component_id: vortex-filtering-probability
-      paths:
-        - vortex-filtering/include/vortex_filtering/probability
-    - component_id: vortex-filtering-utils
-      paths:
-        - vortex-filtering/include/vortex_filtering/utils
-        - vortex-filtering/src/utils      
