--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,40 @@
 fixes:
-  # For each package in the repo
-  - "ros_ws/src/*/vortex-vkf/vortex-filtering/::"
+  - "ros_ws/src/*/vortex-vkf/::"
+
+comment:
+  layout: "header, diff, flags, components"
+ 
+coverage:
+  status:
+    project: off
+    patch: off
+
+flag_management:
+  individual_flags:
+     - name: vortex-filtering
+       paths:
+        - vortex-filtering/include/vortex_filtering/
+       statuses:
+        - type: project
+          target: auto
+          threshold: 1%
+
+
+component_management:
+  individual_components:
+    - component_id: vortex-filtering-models
+      paths:
+        - vortex-filtering/include/vortex_filtering/models
+    - component_id: vortex-filtering-filters
+      paths:
+        - vortex-filtering/include/vortex_filtering/filters
+    - component_id: vortex-filtering-numerical-integration
+      paths:
+        - vortex-filtering/include/vortex_filtering/numerical_integration
+    - component_id: vortex-filtering-probability
+      paths:
+        - vortex-filtering/include/vortex_filtering/probability
+    - component_id: vortex-filtering-utils
+      paths:
+        - vortex-filtering/include/vortex_filtering/utils
+        - vortex-filtering/src/utils      
