--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(ament_cmake    REQUIRED)
 find_package(rclcpp         REQUIRED)
 find_package(std_msgs       REQUIRED)
 find_package(geometry_msgs  REQUIRED)
+find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 3.4.0   REQUIRED)
 find_package(OpenMP         REQUIRED) # For parallel processing with Eigen
 
@@ -75,6 +76,7 @@ install(TARGETS ${PROJECT_NAME}_lib
 
 # === Export libraries ===
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
+ament_export_dependencies(eigen3_cmake_module)
 ament_export_dependencies(${lib_deps}) # Export the dependencies so the package using this package can find them
 
 
@@ -101,8 +103,8 @@ if(BUILD_TESTING)
     # test/probability_test.cpp
     # test/sensor_model_test.cpp
     # test/ukf_test.cpp
-    test/pdaf_test.cpp
-    test/ipda_test.cpp
+    # test/pdaf_test.cpp
+    # test/ipda_test.cpp
   )
   target_include_directories(${PROJECT_NAME}_test PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
