Feature/better imm filter (#8)
* started on new IMM filter

* more changes...

* progress

* made changes outlined in @chrstrom's PR review

* Committing clang-format changes

* started on new IMM filter

* more changes...

* progress

* changed state name system. Almost compiles

* Added ostream operator for MultivarGauss.

* added support for specifying min and max state values

* rebased from main

* fixed size error in imm mixing

* Committing clang-format changes

* todo: pass state_names_ to mixing in imm filter

* imm filter done!

* mixing doesn't work as expectd

* fixed imm mixing probs calculation

* updated documentation

* updated documentation

* Update documentation

* updated readmes

* fixed readme

* changed DynMod to DynModPtr across the package

* fixed model getters in imm model

* fixed const get_model of imm

* change gnuplot enable to check value of define

* created classes for types based on macros

* refactored ekf

* started changing all the types

* Changed all except imm test

* Finished converting all types. All tests pass

* made a concept to check for matrix sizes

* Removed all signs of the old DynModI and SensModI stuff

* refactored ekf and ukf to not be dependent on having sizes defined

* refactored imm model and filter to utilize ekf and ukf changes

* try to make gh action use gcc 13

* fixed include and readme

---------

Co-authored-by: Clang Robot <robot@example.com>

--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -13,6 +13,8 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(
     -Wall -Wextra -Wpedantic 
     -fopenmp # For parallel processing with Eigen
+    -fconcepts-diagnostics-depth=2 # For better concepts error messages
+    -Warray-bounds # For better array bounds error messages
   )
 endif()
 
@@ -32,7 +34,11 @@ find_package(Boost REQUIRED
     filesystem
 ) # for gnuplot
 
-# = Specify dependencies
+
+# === Include directories ===
+include_directories(include)
+
+# = Specify the dependencies
 set(lib_deps
   Eigen3
   OpenMP
@@ -84,8 +90,8 @@ install(
   DESTINATION include
 )
 
-# === Build tests ===
 if(BUILD_TESTING)
+  # add_compile_definitions(GNUPLOT_ENABLE=1)
   add_subdirectory(test)
 endif()
 
