--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -81,6 +81,7 @@ install(TARGETS ${PROJECT_NAME}_lib
 
 # === Export libraries ===
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
+ament_export_dependencies(eigen3_cmake_module)
 ament_export_dependencies(${lib_deps}) # Export the dependencies so the package using this package can find them
 
 
