--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(rclcpp         REQUIRED)
 find_package(std_msgs       REQUIRED)
 find_package(geometry_msgs  REQUIRED)
 find_package(Eigen3         REQUIRED)
+find_package(eigen3_cmake_module REQUIRED)
 find_package(OpenMP         REQUIRED) # For parallel processing with Eigen
 
 find_package(Gnuplot REQUIRED)
