--- a/vortex-filtering/CMakeLists.txt
+++ b/vortex-filtering/CMakeLists.txt
@@ -23,7 +23,7 @@ find_package(ament_cmake    REQUIRED)
 find_package(rclcpp         REQUIRED)
 find_package(std_msgs       REQUIRED)
 find_package(geometry_msgs  REQUIRED)
-find_package(Eigen3         REQUIRED)
+find_package(Eigen3 3.4.0   REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
 find_package(OpenMP         REQUIRED) # For parallel processing with Eigen
 
