Added state class

--- a/vortex-filtering/test/CMakeLists.txt
+++ b/vortex-filtering/test/CMakeLists.txt
@@ -15,6 +15,7 @@ ament_add_gtest(${PROJECT_NAME}_test
   pdaf_test.cpp
   probability_test.cpp
   sensor_model_test.cpp
+  state_test.cpp
   types_test.cpp
   ukf_test.cpp
 )
