--- a/vortex-filtering/test/CMakeLists.txt
+++ b/vortex-filtering/test/CMakeLists.txt
@@ -7,6 +7,7 @@ ament_add_gtest(${PROJECT_NAME}_test
 
   dynamic_model_test.cpp
   ekf_test.cpp
+  ellipsoid_test.cpp
   imm_test.cpp
   ipda_test.cpp
   numerical_integration_test.cpp
