--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -34,14 +34,14 @@ jobs:
             ros_version: 2
 
           # Iron Irwini (May 2023 - November 2024)
-          - docker_image: ubuntu:jammy
-            ros_distribution: iron
-            ros_version: 2
+          # - docker_image: ubuntu:jammy
+          #   ros_distribution: iron
+          #   ros_version: 2
 
           # Rolling Ridley (No End-Of-Life)
-          - docker_image: ubuntu:jammy
-            ros_distribution: rolling
-            ros_version: 2
+          # - docker_image: ubuntu:jammy
+          #   ros_distribution: rolling
+          #   ros_version: 2
 
     container:
       image: ${{ matrix.docker_image }}
