--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         ros_distribution:
           - humble
-          - iron
+          # - iron
 
         # Define the Docker image(s) associated with each ROS distribution.
         # The include syntax allows additional variables to be defined, like
