--- a/vortex-filtering/test/CMakeLists.txt
+++ b/vortex-filtering/test/CMakeLists.txt
@@ -9,11 +9,13 @@ ament_add_gtest(${PROJECT_NAME}_test
   ekf_test.cpp
   ellipsoid_test.cpp
   imm_test.cpp
+  immipda_test.cpp
   ipda_test.cpp
   numerical_integration_test.cpp
   pdaf_test.cpp
   probability_test.cpp
   sensor_model_test.cpp
+  state_test.cpp
   types_test.cpp
   ukf_test.cpp
 )
